basic function done

--- a/src/style/base.less
+++ b/src/style/base.less
@@ -41,4 +41,10 @@ div.radio input{
     user-select: none;
 }
 
+.margin-top-10{
+    margin-top:1.0em;
+}
+.margin-top-20{
+    margin-top:2.0em;
+}
  
