--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -24,6 +24,12 @@
     display: flex;
 }
 
+.logo{
+    background-image: url('img/logo.svg');
+    width: 260px;
+    height: 50px;
+}
+
 .footer{
     margin-top: 20px;
     background-color: @footer-color;
@@ -45,6 +51,13 @@
     color:#cdcdcd;
     font-size: 14px;
     text-align: center;
+}
+
+.search{
+    background-image: url('img/search.svg');
+    height: 24px;
+    width:  24px;
+    margin: 15px 0 0 -35px; 
 }
 
 
