--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -22,6 +22,7 @@
 
 .content-header{
     display: flex;
+    padding-left: 5px;
 }
 
 .logo{
@@ -45,7 +46,7 @@
 }
 
 .footer-menu {
-    width: 400px;
+    width: 200px;
     flex-grow: 1;
     padding: 0 15px;
     color:#cdcdcd;
