--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -54,11 +54,10 @@
     text-align: center;
 }
 
-.search{
-    background-image: url('img/search.svg');
-    height: 24px;
-    width:  24px;
-    margin: 15px 0 0 -35px; 
+.search-icon{
+    display: inline-block;
+    padding-top: 18px;
+    margin-left: -10px;
 }
 
 
