UI framework + router + redux

--- a/src/style/_index.scss
+++ b/src/style/_index.scss
@@ -1,3 +1,4 @@
-.sass-test{
-    background-color: red;
-}
+@import 'loading.scss';
+@import 'base.scss';
+@import 'bambora.scss';
+@import 'layout.scss';
