--- a/src/style/layout.scss
+++ b/src/style/layout.scss
@@ -1,5 +1,3 @@
-@footer-color: #343434;
-
 .contentAndFooter {
     background-color: #eaeaea;
     display: flex;
@@ -25,15 +23,16 @@
     padding-left: 5px;
 }
 
-.logo{
-    background-image: url('img/logo.svg');
-    width: 260px;
-    height: 50px;
-}
+ .logo{
+        background-image: url('img/logo.png');
+        width: 232px;
+        height: 68px;
+        display: inline-block;
+    }
 
 .footer{
     margin-top: 20px;
-    background-color: @footer-color;
+    background-color: $color-base-dark;
     width: 100%;
     display: flex;
 }
@@ -59,5 +58,10 @@
     padding-top: 18px;
     margin-left: -10px;
 }
+
+a.active, a:hover{
+    color:$color-primary !important;
+}
+
 
 
