--- a/src/style/layout.scss
+++ b/src/style/layout.scss
@@ -1,5 +1,5 @@
 .contentAndFooter {
-    background-color: #eaeaea;
+    background-color: $color-content-background;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
